Update and rename index6.html to index.html

--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@ body{
     <nav class="navbar">
 <a href=""><img src="baby-kids-retro-svg-design-file_958141-764.jpg" alt="" style="width: 2cm;height: 1.5cm; border-radius: 10px;"></a>
 <ul class="navlinks">
-    <li><a href="index6.html">Home</a></li>
+    <li><a href="index.html">Home</a></li>
     <li><a href="contact.html">Contact us</a></li>
     <li><a href=" #about ">About us</a></li>
     <li><a href="#service">Service</a></li>
@@ -313,3 +313,4 @@ body{
 
    </body>
 </html>
+
