--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@ padding: 20px;
   <nav class="navbar">
 <a href=""><img src="baby-kids-retro-svg-design-file_958141-764.jpg" alt="" style="width: 2cm;height: 1.5cm; border-radius: 10px;"></a>
 <ul class="navlink">
-<li><a href="index6.html">Home</a></li>
+<li><a href="index.html">Home</a></li>
 <li><a href="">Service</a></li>
 <li><a href="">Aboutus</a></li>
 <li><a href="">Contactus</a></li>
@@ -81,4 +81,5 @@ padding: 20px;
 
 
 </body>
+
 </html>
