--- a/login.html
+++ b/login.html
@@ -76,7 +76,7 @@
         <a href="http://"> <img src="baby-kids-retro-svg-design-file_958141-764.jpg" alt="" style="width: 2cm;height: 1.5cm; border-radius: 10px;">
         </a>
         <ul class="navlinks">
-            <li><a href="index6.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="">Contact us</a></li>
             <li><a href="#about">About us</a></li>
             <li><a href="#service">Service</a></li>
@@ -123,5 +123,6 @@
 
 
 </body>
+
 
 </html>
