--- a/singin.html
+++ b/singin.html
@@ -76,7 +76,7 @@
         <a href="http://"> <img src="baby-kids-retro-svg-design-file_958141-764.jpg" alt="" style="width: 2cm;height: 1.5cm; border-radius: 10px;">
         </a>
         <ul class="navlinks">
-            <li><a href="index6.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="contact.html">Contact us</a></li>
             <li><a href="">About us</a></li>
             <li><a href="">Service</a></li>
@@ -132,4 +132,5 @@
 
  
 </body>
+
 </html>
